# AdvsGAN

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
configs/: base.yaml  paths.yaml
configs/adversary/: compression.json  paraphrase.json  rewrite_cpu.yaml  style_transfer.json
configs/data/: pubmed_rct.toml  pubmed_rct.yaml  splits_default.yaml
configs/detector/: baseline_tfidf_lr.yaml  hybrid_cpu.yaml
configs/eval/: default.json  default.yaml
configs/experiments/: full_improved.yaml  full_report.yaml  improved_quick.yaml  robust_hybrid.yaml  screenshot_baseline.yaml
configs/generation/: default.toml  qwen_small.yaml  seqgan_legacy.yaml
data/: README.md
docs/: architecture.md  experiment_matrix.md  reproducibility.md  threat_model.md
notebooks/: 01_screenshot_baseline.ipynb
scripts/: bootstrap_cpu.sh  make_demo_assets.sh  run_baseline.sh  run_full_pipeline.sh
src/biofake/: __init__.py  cli.py  io.py  schemas.py  seed.py
src/biofake/adversary/: __init__.py  attacks.py  base.py  compression.py  constraints.py  paraphrase.py  registry.py  rewrite_agent.py  schema.py  style_transfer.py
tests/: conftest.py
tests/fixtures/: mini_authentic.jsonl  mini_generated.jsonl  mini_rewritten.jsonl
tests/integration/: test_pipeline_end_to_end.py
tests/regression/: test_metric_ranges.py
tests/smoke/: test_cli_and_demo.py
tests/unit/: conftest.py  test_ablation_and_registry.py  test_adversary_attacks.py  test_biofake_data_pubmed_rct.py  test_biofake_generation_backends.py  test_config_and_models.py  test_evaluation_metrics.py
(+31 files in other folders)
